--- a/MeetingCalendar/Main.storyboard
+++ b/MeetingCalendar/Main.storyboard
@@ -497,19 +497,21 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yob-Mv-yrH" userLabel="CloseButton">
-                                        <rect key="frame" x="313" y="-7" width="40" height="40"/>
+                                    <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C6n-so-sdn" userLabel="DummyDateTF">
+                                        <rect key="frame" x="56" y="43" width="262" height="34"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="W0t-6g-kem"/>
-                                            <constraint firstAttribute="width" constant="40" id="eJZ-fs-2sX"/>
+                                            <constraint firstAttribute="height" constant="34" id="ITR-Ee-CXL"/>
+                                            <constraint firstAttribute="width" constant="262" id="n6L-YN-YDd"/>
                                         </constraints>
-                                        <state key="normal" image="page2_2_x">
-                                            <attributedString key="attributedTitle"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="cancelEditing:" destination="W4t-XU-YlE" eventType="touchUpInside" id="s4M-HU-6JV"/>
-                                        </connections>
-                                    </button>
+                                        <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="IropkeBatangOTFM" family="Iropke Batang OTF" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wb6-sh-iah" userLabel="DeleteButton">
                                         <rect key="frame" x="293" y="442" width="18" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -537,21 +539,19 @@
                                         <fontDescription key="fontDescription" name="IropkeBatangOTFM" family="Iropke Batang OTF" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C6n-so-sdn" userLabel="DummyDateTF">
-                                        <rect key="frame" x="56" y="43" width="262" height="34"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yob-Mv-yrH" userLabel="CloseButton">
+                                        <rect key="frame" x="313" y="-5" width="40" height="40"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="34" id="ITR-Ee-CXL"/>
-                                            <constraint firstAttribute="width" constant="262" id="n6L-YN-YDd"/>
+                                            <constraint firstAttribute="height" constant="40" id="W0t-6g-kem"/>
+                                            <constraint firstAttribute="width" constant="40" id="eJZ-fs-2sX"/>
                                         </constraints>
-                                        <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" name="IropkeBatangOTFM" family="Iropke Batang OTF" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
-                                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                    </textField>
+                                        <state key="normal" image="page2_2_x">
+                                            <attributedString key="attributedTitle"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cancelEditing:" destination="W4t-XU-YlE" eventType="touchUpInside" id="s4M-HU-6JV"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="uU5-Jx-0CR" firstAttribute="trailing" secondItem="xta-Nl-qPI" secondAttribute="trailing" constant="-105" id="3IS-uZ-LHb"/>
@@ -586,7 +586,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.3458237833425678" green="0.34828955387748428" blue="0.35568686548223349" alpha="0.42674443493150682" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.3458237833425678" green="0.34828955387748428" blue="0.35568686548223349" alpha="0.92000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
                             <constraint firstItem="wO1-M8-ckO" firstAttribute="centerX" secondItem="8Ex-Oe-6rD" secondAttribute="centerX" id="3YN-WE-Kh0"/>
